--- a/Expense Tracker/appsettings.json
+++ b/Expense Tracker/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DevConnection": "Server=(local)\\SQLEXPRESS01;Database=DemoDb;Trusted_Connection=True;MultipleActiveResultSets=True;TrustServerCertificate=True;Encrypt=false"
+    "DevConnection": "Server=(local)\\SQLEXPRESS;Database=DemoDb;Trusted_Connection=True;MultipleActiveResultSets=True;TrustServerCertificate=True;Encrypt=false"
   }
 }
